# AppStore-public

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: update-readme.yml  validate-apps.yml
2synthesize-recruitly/: app.json
2synthesize-recruitly/HrFlow/: .env.example  .gitignore  =1.30.0  README.md  test_sheet_backend_engineer.txt  test_sheet_fullstack_developer.txt
404jobnotfound-remi-ai/: .env.example  README.md  app.json
404jobnotfound-remi-ai/agent/: interview_agent.py  prompts.py  (+1 more)
EdouardAndre-404-job-not-found/: pyproject.toml
HEpiR-HREvolution/: .env.example  PROJECT_DOCS.md  README.md  app.json  docker-compose.yml
apx-cv-killer/: .env.example  app.json
claw4hr-passive-talent-intelligence/: .env.example  README.md  app.json
clawedin-openclawjobfindagent/: .env.example  README.md  app.json  hrflow.skill
clawedin/hrflow-skill/: main.py  pyproject.toml
example-hiring-dashboard/: .env.example  README.md  app.json  index.html
kenfack-jobfinder/: .env.example  README.md  app.json
loulounassih-scout-flow/: app.json
rubber-sheep-first-round/: app.json
schemas/: app.schema.json
scripts/: list-apps.ts  update-readme.ts  validate-apps.ts
stark-hiring-dashboard/: .env.example  app.json
team404-jobNotFound/: Untitled  app.json
team404-jobNotFound/backend/: pyproject.toml
templates/: .env.example  README.md  app.json
yanfr-lab-open-hr/: .env.example  README.md  app.json  database.py  hrflow_client.py  main.py  requirements.txt  sourcing.py  web_app_fr_v2.py
(+178 files in other folders)
